<resources>
    <string name="app_name">Missed Connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapApi">AIzaSyAa3bocqAvozi-CMbMkpkul_GokfApX6Z4</string>
    <string name="anasayfa">Main</string>
    <string name="ayarlar">Settings</string>
    <string name="cikis_yap">Logout</string>
    <string name="haritada_goster">Show on map</string>
    <string name="kaydet">Save</string>
    <string name="mesaj_gonder">Sender Message</string>
    <string name="bildir">Report</string>
    <string name="sil">Delete</string>
    <string name="sifremi_degistir">Change my password</string>
    <string name="hesap_hareketligi">Account activity</string>
    <string name="gonderi_hareketleri">Posts activity</string>
    <string name="hesabi_sil">Delete account</string>
    <string name="il">City</string>
    <string name="ilce">District</string>
    <string name="konum_sec">Choose location</string>
    <string name="mekan">Place</string>
    <string name="tarih_secimi">Date selection</string>
    <string name="tarih_araligi">Date range</string>
    <string name="saat_araligi">Time range</string>
    <string name="gg_aa_yyyy">dd/mm/yyyy</string>
    <string name="ss_dd">hh:mm</string>
    <string name="aciklama">Description</string>
    <string name="ekle">ADD</string>
    <string name="resim_yukle">Upload image</string>
    <string name="mesaj">Message</string>
    <string name="kullanici_adinizi_giriniz">Enter your username</string>
    <string name="ara">Search</string>
    <string name="hosgeldiniz">Welcome</string>
    <string name="e_posta">Email</string>
    <string name="sifre">Password</string>
    <string name="sifremi_unuttum">Forgot your password?</string>
    <string name="giris_yap">LOGIN</string>
    <string name="hesabiniz_yok_mu">Don\'t have an account?</string>
    <string name="hesap_ac">Create an account</string>
    <string name="do_rulama_linki_g_nder">Send verification link</string>
    <string name="profili_duzenle">Edit profile</string>
    <string name="gonderilerim">My posts</string>
    <string name="kaydedilenler">Bookmarks</string>
    <string name="hesap_ayarlari">Account settings</string>
    <string name="sifre_tekrar">Password again</string>
    <string name="kayit_ol">SIGN UP</string>
    <string name="hesabiniz_var_mi">Do you have an account?</string>
    <string name="giris_yap_text">Login</string>
    <string name="bildirimler">Notifications</string>
    <string name="konum">Location</string>
    <string name="dil_tercihi">Language preference - English</string>
    <string name="hakkimizda">About us</string>
    <string name="hesab_n_z_neden_silmek_istiyorsunuz">Why do you want to delete your account?</string>
    <string name="hesabi_s_l">DELETE ACCOUNT</string>
    <string name="yeni_sifre">New Password</string>
    <string name="yeni_sifre_tekrar">new password again</string>
    <string name="sifreyi_degistir_büyük_harf">CHANGE PASSWORD</string>
    <string name="henuz_gonderi_paylasmadiniz">You haven\'t posted yet</string>
    <string name="gonderi_paylas">Share post</string>
    <string name="sonuc_bulunmadi">There were no results</string>
    <string name="sonuc_bulunamadi_aciklamasi">You can get more accurate results by changing the filtering you do</string>
    <string name="tekrar_arama_yap">Search</string>
    <string name="kaydedilen_gonderi_bulunamadi">Saved post not found</string>
    <string name="paylasimlara_git">Go to posts</string>
    <string name="herhangi_bir_hareketlilik_yok">There is no activity</string>
    <string name="no_activity_explain">Your posts have not yet been shown or searched by users. You can increase your exposure by better organizing your filters.</string>
    <string name="yeni_g_nderi_payla">Share new post</string>
    <string name="log_out_text_title">Should the account be logged out?</string>
    <string name="log_out_text">Log out</string>
    <string name="iptal">Cancel</string>
    <string name="azonce">just now</string>
    <string name="yil">y</string>
    <string name="ay">mo</string>
    <string name="g">d</string>
    <string name="sa">h</string>
    <string name="d">m</string>
    <string name="s">s</string>
    <string name="taraf_ndan_g_r_nt_lendi">Viewed by</string>
    <string name="l_ve_il_eyi_girmeniz_gerekmektedir">You must enter the city and district</string>
    <string name="g_nderi_payla_mak_i_in_profilinizi_tamamlamal_s_n_z">You must complete your profile to post</string>
    <string name="g_nderiniz_payla_l_yor">Your post is being shared..</string>
    <string name="g_nderiniz_payla_ld">Your post has been shared</string>
    <string name="_2_girdi_iniz_tarihten_b_y_k_olamaz">2. It cannot be greater than the date you entered.</string>
    <string name="_2_girdi_iniz_saatten_b_y_k_olamaz">2. It cannot be greater than the time you entered.</string>
    <string name="g_n_ay_y_l_format_na_uygun_giriniz">Enter in accordance with the Day/Month/Year format</string>
    <string name="saat_dakika_format_na_uygun_giriniz">Enter the hour:minute format.</string>
    <string name="saat_aral_n_eksiksiz_giriniz">Enter the exact time range</string>
    <string name="tarih_aral_n_eksiksiz_giriniz">Enter the complete date range</string>
    <string name="il_bos_birakilamaz">City cannot be left blank</string>
    <string name="ilce_bos_birakilamaz">District cannot be left blank</string>
    <string name="aciklama_bos_birakilamaz">Description cannot be left blank</string>
    <string name="galeriye_gitmek_i_in_izin_gerekli">Permission required to go to the gallery</string>
    <string name="izin_ver">Allow</string>
    <string name="izinleri_aktif_etmeniz_gerekiyor">You need to enable permissions</string>
    <string name="error_post">There was an error sharing the post. Try again after checking your internet connection.</string>
    <string name="_2_se_ti_iniz_saat_1_se_ti_iniz_saatten_k_k_olamaz">Your 2nd selected time cannot be before your 1st selected time</string>
    <string name="_2_se_ti_iniz_tarih_1_se_ti_iniz_tarihten_k_k_olamaz">Your 2nd selected date cannot be before your 1st selected date</string>
    <string name="gecersiz_sifre">Invalid password</string>
    <string name="sifre_girme_kurali">The password must be at least 6 characters long and contain at least 1 uppercase letter, 1 lowercase letter and 1 number.</string>
    <string name="sifreler_eslesmiyor">Passwords do not match</string>
    <string name="sifreniz_g_ncellendi_tekrar_giri_yap_n_z">Your password has been updated. Log in again.</string>
    <string name="bir_hata_olu_tu_l_tfen_daha_sonra_tekrar_deneyiniz">Something went wrong. Please try again later.</string>
    <string name="sifrenizi_yanl_girdiniz">You entered your password incorrectly</string>
    <string name="sifrenizi_giriniz">Enter your password</string>
    <string name="bu_alan_bo_b_rak_lamaz">This field cannot be left blank</string>
    <string name="hesap_silme_onayi">Account Deletion Confirmation</string>
    <string name="silme_onayi">This action will permanently delete your account and all your data. Are you sure you want to continue?</string>
    <string name="evet">Yes</string>
    <string name="hesab_n_z_1_hafta_i_inde_silinecektir">Your account will be deleted within 1 week</string>
    <string name="hesap_silme_i_lemi_ba_ar_s_z_l_tfen_tekrar_deneyiniz">Account deletion failed. Please try again</string>
    <string name="kaydediliyor">Saving..</string>
    <string name="profiliniz_kaydedildi">Your profile has been saved</string>
    <string name="error_save_profile">There was an error saving your profile. Try again after checking your internet connection.</string>
    <string name="aradiginiz_yer_bulunamadi">The place you were looking for was not found</string>
    <string name="alanin_disina_cikamazsiniz">" You cannot leave the area"</string>
    <string name="haritada_isaretleme_yapmadiniz">You didn\'t mark it on the map!</string>
    <string name="dogrulama_e_posta_gonderildi_kontrol_edin">Verification email has been sent. Please check your email.</string>
    <string name="mail_adresinizi_giriniz">Enter your e-mail address</string>
    <string name="sifre_degisikligi_icin_e_posta_girin">Enter your e-mail address to change your password</string>
    <string name="dogrulama_gonderilirken_hata_olustu">An error occurred while sending the verification email. Please try again later.</string>
    <string name="mail_adresi_ge_ersiz">Email address is invalid</string>
    <string name="giris_yapiliyor">Logging in..</string>
    <string name="bu_hesap_silinme_asamasindadir">This account is in the process of being deleted</string>
    <string name="internet_baglantinizi_kontrol_edin">Something went wrong. Try again after checking your internet connection.</string>
    <string name="e_posta_adresi_kay_tl_de_il">Email address not registered</string>
    <string name="gecersiz_e_posta_veya_sifre">Invalid email or password</string>
    <string name="giris_yaparken_bir_hata_olu_tu_hata">"An error occurred while logging in. Error: "</string>
    <string name="sifre_sifirlama_baglantisi_gonderildi">The password reset link has been sent to your email address. Please check your email.</string>
    <string name="sifre_sifirlama_ba_lant_s_g_nderilirken_bir_hata_olu_tu">An error occurred while sending the password reset link.</string>
    <string name="e_posta_adresinizi_dogrulamadiniz">You have not verified your email address.</string>
    <string name="gecersiz_kullanici">Invalid user. Please check your e-mail address.</string>
    <string name="gecersiz_kimlik">Invalid credentials. Please make sure you have entered your e-mail address correctly.</string>
    <string name="unexpected">An unknown error occurred. Please try again.</string>
    <string name="kaydedildi">Saved</string>
    <string name="mesaj_g_ndermek_i_in_profilinizi_tamamlamal_s_n_z">You must complete your profile to send a message.</string>
    <string name="paylasiminiz">"Your post "</string>
    <string name="tarafindan_goruntulendi">"was viewed by "</string>
    <string name="kendine_mesaj_g_nderemezsiniz">You can\'t send messages to yourself!</string>
    <string name="kullanici_bildirildi">User reported</string>
    <string name="kullaniciyi_bildirme_sebebinizi_aciklayiniz">Explain your reason for reporting the user.</string>
    <string name="kendinizi_bildiremezsiniz">You cannot report yourself!</string>
    <string name="mesaji_silmek_istiyor_musunuz">Do you want to delete the message?</string>
    <string name="mesaj_silinirken_hata_olustu">Error deleting message.</string>
    <string name="gonderiniz_silindi">Your post was deleted.</string>
    <string name="gonderi_silinemedi_l_tfen_internet_ba_lant_n_z_kontrol_edin">The post could not be deleted. Please check your internet connection.</string>
    <string name="kayit_olunuyor">Registering..</string>
    <string name="bu_e_posta_adresiyle_zaten_kay_tl_bir_kullan_c_var">There is already a registered user with this email address.</string>
    <string name="kayit_olurken_bir_hata_olustu">"An error occurred while registering. Error: "</string>
    <string name="kaydedilenlerden_silindi">Deleted from Saved</string>
    <string name="konum_izni_gerekli">Location Permission Required</string>
    <string name="sec">Select</string>
    <string name="turkce">Turkish</string>
    <string name="ingilizce">English</string>
    <string name="info_message_delete">If you delete the message, the entire chat will be irreversibly deleted.</string>
    <string name="mesaj_sil">Delete message</string>
    <string name="saat_aral_n_belirleyiniz">Specify Time Range</string>
    <string name="temizle">Clear</string>
    <string name="sec_ve_devam_et">Select and continue</string>
    <string name="g_nderiyi_bildirme_sebebini_a_klay_n_z">Explain the reason for reporting the shipment</string>
</resources>