<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_custom_dialog_message_delete">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mesaji_silmek_istiyor_musunuz"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_message_delete"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/roboto_regular"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iptal"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mesaj_sil"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>
