<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_custom_dialog_message_delete">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Dili Seçin/Select Language"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="normal" />

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/turkish_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_selection_language"
            android:foreground="@drawable/click_effect"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:text="@string/turkce"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/english_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_selection_language"
            android:foreground="@drawable/click_effect"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:text="@string/ingilizce"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iptal"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>
