<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/saat_aral_n_belirleyiniz"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TimePicker
        android:id="@+id/startTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:timePickerMode="spinner"
        android:textCursorDrawable="@drawable/edittext_cursor_color_white"
        android:theme="@style/abirStyle"/>

    <TimePicker
        android:id="@+id/endTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:timePickerMode="spinner"
        android:textCursorDrawable="@drawable/edittext_cursor_color_white"
        android:theme="@style/abirStyle"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" - "
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"/>


        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button_date_background"
            android:text="@string/temizle"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:padding="1dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_regular" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button_date_background"
            android:text="@string/sec_ve_devam_et"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:padding="1dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_regular" />


    </LinearLayout>

</LinearLayout>
